--- a/packages/connection/composer.json
+++ b/packages/connection/composer.json
@@ -9,6 +9,7 @@
 		"automattic/jetpack-options": "@dev",
 		"automattic/jetpack-roles": "@dev",
 		"automattic/jetpack-status": "@dev",
+		"automattic/jetpack-terms-of-service": "@dev",
 		"automattic/jetpack-tracking": "@dev"
 	},
 	"require-dev": {
